# xsshunter-rs

./: .env  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  docker-compose.yaml
config/: xsshunter.toml
data/: probe.js
migrations/: 00001_init_schema.down.sql  00001_init_schema.up.sql
src/: app.rs  config.rs  db.rs  errors.rs  logs.rs  main.rs  models.rs  temp.rs  utils.rs
src/app/: handlers.rs  routes.rs
src/db/: collected_pages.rs  payload_fire_results.rs  settings.rs
