[package]
name = "xsshunter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = [
    "tls-rustls",
    "postgres",
    "time",
    "chrono",
    "runtime-tokio-rustls",
    "uuid",
    "ipnetwork",
] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
lazy_static = "1.4.0"
bcrypt = "0.15.0"
chrono = { version = "0.4.35", features = ["serde"] }

[dev-dependencies]
test-log = { version = "0.2.15", features = ["trace", "tracing-subscriber"] }
